added profile creation page but its empty about pg changes

--- a/public/start.html
+++ b/public/start.html
@@ -5,6 +5,7 @@
 <p><div><text><b>Welcome To Color Rush</b></text></div></p>
 <h5>
 <p>A Game By Aaron Sawyer</p>
+<p><a href="/about.html">About Color Rush</a></p>
 </h5>
 </h1>
 </head>
