--- a/public/about.html
+++ b/public/about.html
@@ -4,12 +4,16 @@
 <h1>
 <p><div><text><b>About Color Rush</b></text></div></p>
 <h3>
-<text><u>How to Play</u></text>
+<p><u>How to Play</u></p>
 <h4>
-<text>Color Rush is a game where a randomly colored ball flys up the screen in one of three lanes using your right and left arrow keys you will move the ball into the corresponding colored lane to score a point if you fail to do so then you loose.</text>
+<p>Color Rush is a game where a randomly colored ball flys up the screen in one of three lanes using your right and left arrow keys you will move the ball into the corresponding colored lane to score a point if you fail to do so then you lose.</p>
 </h4>
 </h3>
 </h1>
+<p><h3><u>Leaderboard</u></h3></p>
+<p><h4>The Leaderboard in Color Rush is a place where you can veiw other peoples and maybe even your own accomplishments if you are lucky enough to score a high score than a box will pop up notifying you that you have made it onto the Leaderboard it will than automatically put your name onto the Leaderboard with your score for everybody to veiw and strive to beat.</h4></p>
+<p><h3><u>Profiles</u></h3></p>
+<p><h4>In order to play Color Rush you first must create a profile click here to create one</h4></p>
 </head>
 
 <body>
