Button and text boxes to enter User and pass on in create.html link to create from about.html

--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 <title>About Color Rush</title>
+</head>
+
+<body>
+
 <h1>
 <p><div><text><b>About Color Rush</b></text></div></p>
 <h3>
@@ -13,9 +17,7 @@
 <p><h3><u>Leaderboard</u></h3></p>
 <p><h4>The Leaderboard in Color Rush is a place where you can veiw other peoples and maybe even your own accomplishments if you are lucky enough to score a high score than a box will pop up notifying you that you have made it onto the Leaderboard it will than automatically put your name onto the Leaderboard with your score for everybody to veiw and strive to beat.</h4></p>
 <p><h3><u>Profiles</u></h3></p>
-<p><h4>In order to play Color Rush you first must create a profile click here to create one</h4></p>
-</head>
+<p><h4>In order to play Color Rush you first must create a profile click <a href="/create.html">HERE</a> to create one</h4></p>
 
-<body>
 </body>
 </html>
