--- a/public/create.html
+++ b/public/create.html
@@ -1,4 +1,23 @@
 <html>
+
+<head>
 <title>Color Rush Profile Creation</title>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+</head>
+
+<body>
 <p><h1>Color Rush Profile Creation</h1></p>
+<p><h2><u>Create Profile</u></h2></p>
+<p>Username<input type="text" id="username-text"></input></p>
+<p>Password<input type="text" id="password-text"></input></p>
+<button id="submit-button">Submit</button>
+</body>
+
+<script type="text/javascript">
+$('#submit-button').click(function() {
+	alert('clicked the button!');
+});
+</script>
+
 </html>
