--- a/public/create.html
+++ b/public/create.html
@@ -16,7 +16,13 @@
 
 <script type="text/javascript">
 $('#submit-button').click(function() {
-	alert('clicked the button!');
+	var username=$('#username-text').val();
+        var password=$('#password-text') 
+if (password-text="") {
+alert('enter password')
+}
+var greeting="Thank you, "+username+" for creating an account!";
+alert(greeting);
 });
 </script>
 
