There is now a profile page and the ability to create a profile

--- a/public/create.html
+++ b/public/create.html
@@ -28,6 +28,7 @@ else if (password=="") {
 else {
   var greeting="Thank you, "+username+" for creating an account!";
   alert(greeting);
+window.location.href='/myprofile.html?username='+username;
 }
 });
 </script>
