Rough website without the game

--- a/public/myprofile.html
+++ b/public/myprofile.html
@@ -7,8 +7,11 @@
 <h1><div><text><b>Welcome to your profile page</b></text></div></h1>
 <h2><div><text><u>Your Profile</u></text></div></h2>
 <div><text>Here you can look at your game stats and edit your profile</text></div>
-
-
+<div><text><b>Wins:</b></text></div>
+<div><text><b>Games Played:</b></text></div>
+<div><text><b>Rank:</b></text></div>
+<div><text><b>Points Scored:</b></text></div>
+<h2><text><u>Click Here To Play</u></text></h2>
 
 </body>
 
